--- a/form-angular.html
+++ b/form-angular.html
@@ -12,20 +12,34 @@
 <!-- ng-app: khai báo tên application -->
 <body ng-app="wd18301">
     <!-- ng-controller: khai báo tên controller -->
-    <form action="" class="container" ng-controller="myController">
-        <div>
-            <label for="" class="form-label">Name</label>
-            <input type="text" class="form-control" ng-model="name">
-            <h1>Hello {{ name }}</h1>
-            <!-- mảng
-            <h1>Hello {{ listUser[0] }}</h1>
-            <h1>Hello {{ listUser[1] }}</h1>
-            <h1>Hello {{ listUser[2] }}</h1> -->
-            <!-- Object -->
-            <h1>Hello {{ teacher.name }}</h1>
-            <h1>Hello {{ teacher['email'] }}</h1>
-        </div>
-    </form>
+    <div class="container" ng-controller="imgController">
+        <form action="" class="container" ng-controller="myController">
+            <div>
+                <label for="" class="form-label">Name</label>
+                <input type="text" class="form-control" ng-model="name">
+                <h1 ng-bind="name"></h1>
+                <!-- mảng  -->
+
+                <!-- <h1 ng-if="listUser.length > 0" ng-repeat="user in listUser">Hello {{ user }}</h1>
+                <h1 ng-show="listUser.length > 0" ng-repeat="user in listUser">Hello {{ user }}</h1>
+                <h1 ng-hide="listUser.length == 0" ng-repeat="user in listUser">Hello {{ user }}</h1>
+                 -->
+                <button class="btn btn-primary" type="button" ng-click="upCount()">Bấm</button>
+                <p ng-mouseover="upCount()">{{ count }}</p>
+                <h1 ng-if="count%2==0">Đây là số chẵn</h1>
+                <h1 ng-show="count%2==0">Đây là số chẵn</h1>
+                <h1 ng-hide="count%2==0">Đây là số lẻ</h1>
+                
+                 <!-- Object -->
+                <h1>Hello {{ teacher.name }}</h1>
+                <h1>Hello {{ teacher['email'] }}</h1>
+                <!-- <img src="{{path}}" alt=""> -->
+                <img src="{{ $parent.$parent.path }}" alt="">
+            </div>
+        </form>
+    </div>
+    <img src="{{path}}" alt="">
+
     <script>
         //khởi tạo module angular
         var app = angular.module('wd18301', []);
@@ -39,11 +53,20 @@
         // app.controller('myController', function ($scope) {
         //     $scope.listUser = ['thaivm2','thaivm3','thaivm4'];
         // });
+        app.controller('imgController', function ($scope, $rootScope) {
+            // $scope.path = './images/chicago.jpg'; scope thường
+            $rootScope.path = './images/chicago.jpg';
+        })
         app.controller('myController', function ($scope) {
             $scope.teacher = {
                 name: 'thaivm2',
                 email: 'thaivm2@fe.edu.vn',
                 gender: 'male',
+            };
+            $scope.listUser = [];
+            $scope.count = 1;
+            $scope.upCount = function () {
+                $scope.count += 1;
             };
         });
         //rút gọn
