--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <script src="./angular-1.8.2/angular.min.js"></script>
     <script src="./angular-1.8.2/angular-route.min.js"></script>
     <script src="./controllers/ListController.js"></script>
+    <script src="./controllers/AddController.js"></script>
+    <script src="./controllers/EditController.js"></script>
 </head>
 <body ng-app="wd18301">
   <div class="p-5 bg-primary text-white text-center">
@@ -31,20 +33,6 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#!/add">Thêm mới</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Dropdown
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
           </li>
         </ul>
         <form class="d-flex" role="search">
@@ -69,6 +57,10 @@
         controller: ListController,
       }).when('/add', {
         templateUrl: 'views/add.html',
+        controller: AddController,
+      }).when('/detail/:id', {
+        templateUrl: 'views/detail.html',
+        controller: EditController,
       })
     })
   </script> 
